add : state function

--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+  </body>
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
+    const root = document.querySelector("#root");
+    const App = () => {
+      const [counter, setCounter] = React.useState(0);
+      const onClick = () => {
+        //setCounter(counter + 1);
+        setCounter((current) => current + 1); // 함수 전달로도 다음 state를 얻을 수 있다.
+      };
+      return (
+        <div>
+          <h3>Total Clicks : {counter}</h3>
+          <button onClick={onClick}>Click me</button>
+        </div>
+      );
+    };
+    ReactDOM.render(<App />, root);
+  </script>
 </html>
